# AIE_FROM_SCRATCH

./: .gitignore  AI_Engineering_From_Scratch_Daily_Plan.xlsx  CURRICULAM.md  README.md  aies_final - Schedule.csv  create_file.py  main.py  pyproject.toml
00-setup-tooling/: day_01.ipynb  day_02.ipynb  day_03.ipynb
01-math-foundations/: day_03.ipynb  day_04.ipynb  day_05.ipynb  day_06.ipynb
02-ml-fundamentals/: Untitled.ipynb  day_07.ipynb  day_08.ipynb  day_09.ipynb  day_10.ipynb  feature_selection.ipynb  linear_regression_assignment.ipynb  linear_regression_from_scratch.ipynb  logistic_regression.ipynb  model_evaluation_metrics_and_Cross_validation.ipynb  plot_descision_regions.ipynb  rakibul_hasan_book.ipynb  svm_fundamentals.ipynb
03-deep-learning-core/: day_11.ipynb  day_12.ipynb  day_13.ipynb
04-computer-vision/: day_14.ipynb  day_15.ipynb  day_16.ipynb  day_17.ipynb  day_18.ipynb  day_19.ipynb
05-nlp-foundations/: day_20.ipynb  day_21.ipynb  day_22.ipynb  day_23.ipynb  day_24.ipynb  day_25.ipynb
06-speech-audio/: day_26.ipynb  day_27.ipynb  day_28.ipynb
07-transformers-deep-dive/: day_29.ipynb  day_30.ipynb
08-generative-ai/: day_31.ipynb  day_32.ipynb  day_33.ipynb  day_34.ipynb
09-reinforcement-learning/: day_35.ipynb
10-llms-from-scratch/: day_36.ipynb  day_37.ipynb  day_38.ipynb  day_39.ipynb  day_40.ipynb  day_41.ipynb
11-llm-engineering/: day_42.ipynb  day_43.ipynb  day_44.ipynb  day_45.ipynb
12-multimodal-ai/: day_46.ipynb  day_47.ipynb  day_48.ipynb  day_49.ipynb  day_50.ipynb  day_51.ipynb  day_52.ipynb  day_53.ipynb  day_54.ipynb  (+3 more)
(+183 files in other folders)
