[project]
name = "ai-eng-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "line-profiler>=5.0.2",
    "matplotlib>=3.11.0",
    "memory-profiler>=0.61.0",
    "mlxtend>=0.25.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]
